--- a/FDPort/packages.config
+++ b/FDPort/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DockPanelSuite" version="3.1.0" targetFramework="net471" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.1.0" targetFramework="net471" />
   <package id="DynamicExpresso.Core" version="2.16.1" targetFramework="net471" />
   <package id="DynamicLanguageRuntime" version="1.3.4" targetFramework="net471" />
   <package id="IronPython" version="3.4.1" targetFramework="net471" />
