发送区域不再需要空格分隔

--- a/FDPort/FDPort.csproj
+++ b/FDPort/FDPort.csproj
@@ -297,6 +297,9 @@
     <EmbeddedResource Include="Controls\TitleTextBox.resx">
       <DependentUpon>TitleTextBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\WaterTextBox.resx">
+      <DependentUpon>WaterTextBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DockPanel\ChartDock.resx">
       <DependentUpon>ChartDock.cs</DependentUpon>
     </EmbeddedResource>
