--- a/FDPort/packages.config
+++ b/FDPort/packages.config
@@ -4,16 +4,20 @@
   <package id="DockPanelSuite.ThemeVS2015" version="3.1.0" targetFramework="net471" />
   <package id="DynamicExpresso.Core" version="2.16.1" targetFramework="net471" />
   <package id="DynamicLanguageRuntime" version="1.3.4" targetFramework="net471" />
+  <package id="Fare" version="2.2.0" targetFramework="net471" />
+  <package id="Handlebars.Net.Helpers" version="2.4.1.4" targetFramework="net471" />
+  <package id="Handlebars.Net.Helpers.Core" version="2.4.1.4" targetFramework="net471" />
+  <package id="Handlebars.Net.Helpers.Xeger" version="2.4.1.4" targetFramework="net471" />
   <package id="IronPython" version="3.4.1" targetFramework="net471" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net471" />
   <package id="ScottPlot" version="4.1.71" targetFramework="net471" />
   <package id="ScottPlot.WinForms" version="4.1.71" targetFramework="net471" />
+  <package id="Stef.Validation" version="0.1.1" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
   <package id="System.Drawing.Common" version="4.7.2" targetFramework="net471" />
   <package id="System.Memory" version="4.5.5" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net471" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net471" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
 </packages>
